Revert "Upgrade Java from 17 to 21 and modernize code with latest language features"
This reverts commit 1218b00b